Updated figwheel-main config to almost working status

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-/target
-/classes
-/checkouts
-pom.xml
-pom.xml.asc
-*.jar
 *.class
+*.jar
+.hg/
+.hgignore
 /.lein-*
 /.nrepl-port
-.hgignore
-.hg/
+/checkouts
+/classes
+/examples
+/target
 /test
+pom.xml
+pom.xml.asc
