Shared package.json and project.json, moved debug to dev app

--- a/resources/leiningen/new/cljs_cli/package.json
+++ b/resources/leiningen/new/cljs_cli/package.json
@@ -8,7 +8,10 @@
     "test": "test"
   },
   "scripts": {
-    "test": "lein test"
+    "test": "lein test",{{#lein-figwheel?}}
+    "start": "lein figwheel",{{/lein-figwheel?}}{{#figwheel-main?}}
+    "start": "lein fig:build",{{/figwheel-main?}}
+    "repl": "lein repl"
   },
   "repository": {
     "type": "git",
