Created shadow cljs config

--- a/resources/leiningen/new/cljs_cli/package.json
+++ b/resources/leiningen/new/cljs_cli/package.json
@@ -6,32 +6,39 @@
   "directories": {
     "doc": "docs",
     "test": "test"
-  },
+  },{{#figwheel-main?}}
   "scripts": {
-    "test": "lein test",{{#lein-figwheel?}}
-    "init": "lein figwheel",
-    "start": "lein figwheel",{{/lein-figwheel?}}{{#figwheel-main?}}
-    "init": "npm install && lein fig:build",
-    "start": "lein fig:build",{{/figwheel-main?}}
+    "test": "",
+    "init": "lein fig:build",
+    "start": "lein fig:build",
     "repl": "lein repl"
-  },
+  },{{/figwheel-main?}}{{#lein-figwheel?}}
+  "scripts": {
+    "test": "",
+    "init": "lein figwheel",
+    "start": "lein figwheel",
+    "repl": "lein repl"
+  },{{/lein-figwheel?}}{{#shadow?}}
+  "scripts": {
+    "test": "",
+    "init": "npm install && npx shadow-cljs watch app",
+    "repl": "npx shadow-cljs cljs-repl app"
+  },{{/shadow?}}
   "repository": {
     "type": "git",
     "url": "FIXME"
   },
   "author": "FIXME <FIXME@FIXME.com>",
-  "license": "Apache-2.0"{{#figwheel-main?}},
+  "license": "Apache-2.0"{{#shadow?}},
   "dependencies": {
     "blessed": "^0.1.81",
-    "react-blessed": "^0.5.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
     "create-react-class": "^15.6.3",
     "node-json-color-stringify": "^1.1.0",
-    "ws": "^6.1.2"
-  }{{/figwheel-main?}}{{#shadow?}},
-  "dependencies": {
+    "react": "^16.7.0",
+    "react-blessed": "^0.5.0",
+    "react-dom": "^16.7.0",
     "shadow-cljs": "^2.7.24",
-    "source-map-support": "^0.5.10"
+    "source-map-support": "^0.5.10",
+    "ws": "^6.1.2"
   }{{/shadow?}}
 }
